
# configure/make dependencies
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")


bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")
archive_override(
    module_name = "hermetic_cc_toolchain",
    integrity = "sha256-kHdFv5FVX3foI0wLlTNx5srFunFdHPEv9kFJbdG86dE=",
    urls = ["https://github.com/uber/hermetic_cc_toolchain/releases/download/v3.1.1/hermetic_cc_toolchain-v3.1.1.tar.gz"],
)


# Set up hermetic cc toolchains for binaries and canisters
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")

use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_make_toolchain",
)

# Comment out for system toolchain
register_toolchains(
    # Linux toolchains
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",

    # These toolchains are only registered locally.
    dev_dependency = True,
)
